all dark mode nav bars fixed

--- a/SportBook/SportBook/wwwroot/css/admin.css
+++ b/SportBook/SportBook/wwwroot/css/admin.css
@@ -15,7 +15,9 @@
         left:0px;
     }
 
-
+.dropdown-item:hover {
+    background-color: transparent !important;
+}
     /* The navigation menu links */
     .sidenav a {
         padding: 8px 8px 8px 32px;
